welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: illegal start of statement
      else if(b<0){
      ^posNeg:20: error: illegal start of statement
    	else if(b<0){
        ^posNeg:26: error: illegal start of statement
    	else if(a<0){
        ^